--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -16,6 +16,7 @@
       <a class="nav-item nav-link" routerLink="/amistosos" >Amistosos</a>
       <a class="nav-item nav-link" routerLink="/torneos" >Torneos</a>
       <a class="nav-item nav-link" routerLink="/historico" >Histórico</a>
+      <a class="nav-item nav-link" routerLink="/liga" >Liga</a>
     </div>
   </div>
 </nav>
