--- a/src/app/components/liga/jornada/jornada.component.html
+++ b/src/app/components/liga/jornada/jornada.component.html
@@ -1,28 +1,10 @@
 <section>
 
-  <h3>Jornada 1</h3>
+  <h3>Jornada {{numJornada +1}}</h3>
 
-  <app-partido [equipoLocal] = "'Fuentalbilla'"
-               [equipoVisitante] = "'Cenicientos'">
-  </app-partido>
-
-  <app-partido [equipoLocal] = "'Fuentalbilla'"
-               [equipoVisitante] = "'Cenicientos'">
-  </app-partido>
-
-  <app-partido [equipoLocal] = "'Fuentalbilla'"
-               [equipoVisitante] = "'Cenicientos'">
-  </app-partido>
-
-  <app-partido [equipoLocal] = "'Fuentalbilla'"
-               [equipoVisitante] = "'Cenicientos'">
-  </app-partido>
-
-  <app-partido [equipoLocal] = "'Fuentalbilla'"
-               [equipoVisitante] = "'Cenicientos'">
-  </app-partido>
-
-  <app-partido [equipoLocal] = "'Fuentalbilla'"
-               [equipoVisitante] = "'Cenicientos'">
-  </app-partido>
+  <article *ngFor="let partido of jornada">
+    <app-partido [equipoLocal] = "partido.local"
+                 [equipoVisitante] = "partido.visitante">
+    </app-partido>
+  </article>
 </section>
