--- a/src/app/components/liga/jornada/partido/partido.component.html
+++ b/src/app/components/liga/jornada/partido/partido.component.html
@@ -1,7 +1,7 @@
 <section class="partido">
-  <h6 class="equipoLocal">{{equipoLocal}}</h6>
+  <h6 class="equipoLocal"><img src="{{equipoLocal.bandera}}" width="25">{{equipoLocal.name}}</h6>
   <span> VS </span>
-  <h6 class="equipoVisitante">{{equipoVisitante}}</h6>
+  <h6 class="equipoVisitante"><img src="{{equipoVisitante.bandera}}" width="25">{{equipoVisitante.name}}</h6>
   <button class="btn btn-sm btn-secondary">Play</button>
   <span class="marcador">
     125 - 124
