--- a/src/app/components/liga/jornada/jornada.component.html
+++ b/src/app/components/liga/jornada/jornada.component.html
@@ -4,7 +4,9 @@
 
   <article *ngFor="let partido of jornada">
     <app-partido [equipoLocal] = "partido.local"
-                 [equipoVisitante] = "partido.visitante">
+                 [equipoVisitante] = "partido.visitante"
+                 [(marcador)] = "partido.marcador"
+    >
     </app-partido>
   </article>
 </section>
