--- a/src/app/components/liga/jornada/partido/partido.component.html
+++ b/src/app/components/liga/jornada/partido/partido.component.html
@@ -2,8 +2,8 @@
   <h6 class="equipoLocal"><img src="{{equipoLocal.bandera}}" width="25">{{equipoLocal.name}}</h6>
   <span> VS </span>
   <h6 class="equipoVisitante"><img src="{{equipoVisitante.bandera}}" width="25">{{equipoVisitante.name}}</h6>
-  <button class="btn btn-sm btn-secondary">Play</button>
+  <button class="btn btn-sm btn-secondary" [disabled]="marcador !== ''" (click)="playGame()">Play</button>
   <span class="marcador">
-    125 - 124
+    {{marcador}}
   </span>
 </section>
