Configurando servicios liga

--- a/src/app/components/liga/clasificacion/clasificacion.component.css
+++ b/src/app/components/liga/clasificacion/clasificacion.component.css
@@ -4,6 +4,7 @@ section{
   border-radius: 5px;
   background-color: rgba(42, 44, 45, 1);
   box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.33);
+  margin-top: 25px;
 }
 
 
