Arreglado fichero servicio

--- a/src/app/components/liga/liga.component.html
+++ b/src/app/components/liga/liga.component.html
@@ -8,7 +8,7 @@
   <!--<div *ngIf="!showClasificacion">-->
 
 
-  <pre>{{message}}</pre>
+  <pre style="color: white">{{message}}</pre>
   <!--<pre>{{mss}}</pre>-->
 
 
