Añadidos parámetro subcampeonato
Añadimos nuevo parámetro, subcampeonato.
Ahora podremos reflejar los subcampeonatos por equipo

--- a/src/app/components/equipos/equipos.component.html
+++ b/src/app/components/equipos/equipos.component.html
@@ -24,12 +24,16 @@
       <hr>
     </article>
 
-    <article class="estrellas" *ngIf="equipoSelected.palmares.length > 0">
-      <span class="trofeos" *ngFor="let trofeo of equipoSelected.palmares ">
-        <i class="fas fa-trophy"></i>
-      </span>
-      {{equipoSelected.palmares.length}}
+    <article class="palmares">
+      <article class="estrellas" *ngIf="equipoSelected.copas">
+        <i class="fas fa-trophy"></i>{{equipoSelected.copas}}
+      </article>
+
+      <article class="estrellasSub" *ngIf="equipoSelected.subcampeonatosCopa">
+        <i class="fas fa-trophy"></i>{{equipoSelected.subcampeonatosCopa}}
+      </article>
     </article>
+
 
     <!--MEDIAS-->
     <article class="medias">
