--- a/src/app/components/equipos/equipos.component.css
+++ b/src/app/components/equipos/equipos.component.css
@@ -62,8 +62,8 @@ section.contenedor .detallesEquipo{
   grid-column: 1 / 3;
 
   display: grid;
-  grid-template-rows: auto auto auto;
-  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
+  grid-template-columns: auto auto auto;
 
   background-color: #1d2124;
   border : solid #333333 thin;
@@ -80,8 +80,8 @@ section.contenedor .detallesEquipo .nombreEquipo{
   grid-template-rows: auto auto auto;
   grid-template-columns: auto 1fr;
   grid-template-areas:
-    "escudoEquipo         nombreEquipo"
-    "separador            separador"
+    "escudoEquipo         nombreEquipo      palmares"
+    "separador            separador         separador"
 }
 
 section.contenedor .detallesEquipo .estrellas{
@@ -91,6 +91,15 @@ section.contenedor .detallesEquipo .estrellas{
   justify-self: center;
   align-self: center;
   color: #ffac41;
+}
+
+section.contenedor .detallesEquipo .estrellasSub{
+  display: flex;
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+  justify-self: center;
+  align-self: center;
+  color: silver;
 }
 
 section.contenedor .detallesEquipo .estrellas > * {
@@ -105,6 +114,12 @@ section.contenedor .detallesEquipo .nombreEquipo > h2{
   font-size: 65px;
   padding-left: 16px;
   grid-area: nombreEquipo;
+}
+
+section.contenedor .detallesEquipo .nombreEquipo > article.palmares {
+  display: flex;
+  justify-content: space-between;
+  grid-area: palmares;
 }
 
 section.contenedor .detallesEquipo .nombreEquipo > img{
